--- a/sampleclient/build.gradle
+++ b/sampleclient/build.gradle
@@ -25,7 +25,8 @@ android {
 dependencies {
     androidTestImplementation deps.junit
     androidTestImplementation deps.support.test.rules
-    api project(path: ':rxremote')
+    implementation project(path: ':rxremote')
+    //implementation 'com.josesamuel:rxremote:1.0.0'
 
     api 'io.reactivex:rxjava:1.2.3'
     api 'org.parceler:parceler-api:1.1.9'
