--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
     ext.versions = [
             'minSdk'    : 9,
             'compileSdk': 26,
-            'buildTools': '26.0.2',
+            'buildTools': '27.0.3',
             'release'   : '${VERSION_NAME}',
-            'androidPlugin': '3.0.1',
+            'androidPlugin': '3.1.3',
             'supportLibrary': '26.0.1'
     ]
 
@@ -47,6 +47,7 @@ subprojects { project ->
     version = VERSION_NAME
 
     repositories {
+        google()
         jcenter()
         mavenCentral()
         maven {
