--- a/sampleservice/src/main/AndroidManifest.xml
+++ b/sampleservice/src/main/AndroidManifest.xml
@@ -37,6 +37,17 @@
             </intent-filter>
         </service>
 
+
+        <service
+            android:name=".SampleAidlService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="util.remoter.aidlservice.SampleAidlService" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
